--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "MyWeb",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-    ,"start": "nodemon app.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/webharshit/node_website.git"
   },
-  "author": "Harshit Jindal ",
+  "author": "Harshit Jindal",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/webharshit/node_website/issues"
@@ -20,6 +20,8 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "ejs": "^3.1.5",
-    "express": "^4.17.1"
-  }
+    "express": "^4.17.1",
+    "path": "^0.12.7"
+  },
+  "devDependencies": {}
 }
